[gd_scene load_steps=5 format=3 uid="uid://pyui2qjdy5lu"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_knt25"]
[ext_resource type="PackedScene" uid="uid://6leg2pgnfdjg" path="res://campaign_map/events/event_selection_container.tscn" id="2_5kxem"]
[ext_resource type="Script" path="res://campaign_map/events/event_selection.gd" id="2_tmuj8"]

[sub_resource type="Theme" id="Theme_q5c1h"]
default_font_size = 36

[node name="EventSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_knt25")
script = ExtResource("2_tmuj8")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="EventSelectionContainer" parent="MarginContainer2" instance=ExtResource("2_5kxem")]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
offset_right = 1280.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_q5c1h")
text = "Choose A Selection"
horizontal_alignment = 1

[connection signal="event_option_selected" from="MarginContainer2/EventSelectionContainer" to="." method="_on_event_option_selected"]
[connection signal="leave_selected" from="MarginContainer2/EventSelectionContainer" to="." method="_on_event_selection_container_leave_selected"]
